--- a/src/twig/index.twig
+++ b/src/twig/index.twig
@@ -3,62 +3,62 @@
 {% set description = "“Vestibulum quis porttitor dui! Quisque viverra nunc mi, a pulvinar purus condimentum“" %}
 
 {% block content %}
-<header class="b-home__header">
-  <div class="b-home__header-inner b-container">
-    <h1 class="b-home__title">
-      <span class="b-home__title-brand">THE BRAND</span> OF LUXERIOUS <span class="b-home__title-hit">FASHION</span>
+<header class="home__header">
+  <div class="home__header-inner container">
+    <h1 class="home__title">
+      <span class="home__title-brand">THE BRAND</span> OF LUXERIOUS <span class="home__title-hit">FASHION</span>
     </h1>
   </div>
 </header>
 
-<main class="b-container">
-  <section class="b-offers">
-    <a href="#" class="b-offers__item">
-      <div class="b-offers__box">
-        <div class="b-offers__box-top">30% OFF</div>
-        <div class="b-offers__box-bottom">FOR WOMEN</div>
+<main class="container">
+  <section class="offers">
+    <a href="#" class="offers__item">
+      <div class="offers__box">
+        <div class="offers__box-top">30% OFF</div>
+        <div class="offers__box-bottom">FOR WOMEN</div>
       </div>
       <img src="assets/img/offers/img-01.jpg" alt="">
     </a>
 
-    <a href="#" class="b-offers__item">
-      <div class="b-offers__box">
-        <div class="b-offers__box-top">HOT DEAL</div>
-        <div class="b-offers__box-bottom">FOR MEN</div>
+    <a href="#" class="offers__item">
+      <div class="offers__box">
+        <div class="offers__box-top">HOT DEAL</div>
+        <div class="offers__box-bottom">FOR MEN</div>
       </div>
       <img src="assets/img/offers/img-02.jpg" alt="">
     </a>
 
-    <a href="#" class="b-offers__item">
-      <div class="b-offers__box">
-        <div class="b-offers__box-top">NEW ARRIVALS</div>
-        <div class="b-offers__box-bottom">FOR KIDS</div>
+    <a href="#" class="offers__item">
+      <div class="offers__box">
+        <div class="offers__box-top">NEW ARRIVALS</div>
+        <div class="offers__box-bottom">FOR KIDS</div>
       </div>
       <img src="assets/img/offers/img-03.jpg" alt="">
     </a>
 
-    <a href="#" class="b-offers__item">
-      <div class="b-offers__box">
-        <div class="b-offers__box-top">LUXIROUS & TRENDY</div>
-        <div class="b-offers__box-bottom">ACCESSORIES</div>
+    <a href="#" class="offers__item">
+      <div class="offers__box">
+        <div class="offers__box-top">LUXIROUS & TRENDY</div>
+        <div class="offers__box-bottom">ACCESSORIES</div>
       </div>
       <img src="assets/img/offers/img-04.jpg" alt="">
     </a>
   </section>
 
-  <section class="b-home__products">
-    <h2 class="b-home__products-title">Featured Items</h2>
+  <section class="home__products">
+    <h2 class="home__products-title">Featured Items</h2>
 
-    <p class="b-home__products-text">Shop for items based on what we product in this week</p>
+    <p class="home__products-text">Shop for items based on what we product in this week</p>
 
-    <div class="b-product__list">
-      <div class="b-product__item">
-        <div class="b-product__media">
+    <div class="product__list">
+      <div class="product__item">
+        <div class="product__media">
           <img src="assets/img/products/img-01.jpg" alt="">
 
-          <div class="b-product__add">
-            <button type="button" class="b-btn b-btn__cart">
-              <svg class="b-btn__cart-icon">
+          <div class="product__add">
+            <button type="button" class="btn btn__cart">
+              <svg class="btn__cart-icon">
                 <use xlink:href="assets/img/sprite.svg#basket"></use>
               </svg>
               Add to Cart
@@ -66,26 +66,26 @@
           </div>
         </div>
 
-       <div class="b-product__boxed">
-         <h3 class="b-product__boxed-title">
-           <a href="product.html" class="b-product__boxed-link">ELLERY X M'O CAPSULE</a>
+       <div class="product__boxed">
+         <h3 class="product__boxed-title">
+           <a href="product.html" class="product__boxed-link">ELLERY X M'O CAPSULE</a>
          </h3>
 
-         <p class="b-product__boxed-text">
+         <p class="product__boxed-text">
            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
          </p>
 
-         <div class="b-product__boxed-cost">$52.00</div>
+         <div class="product__boxed-cost">$52.00</div>
        </div>
       </div>
 
-      <div class="b-product__item">
-        <div class="b-product__media">
+      <div class="product__item">
+        <div class="product__media">
           <img src="assets/img/products/img-02.jpg" alt="">
 
-          <div class="b-product__add">
-            <button type="button" class="b-btn b-btn__cart">
-              <svg class="b-btn__cart-icon">
+          <div class="product__add">
+            <button type="button" class="btn btn__cart">
+              <svg class="btn__cart-icon">
                 <use xlink:href="assets/img/sprite.svg#basket"></use>
               </svg>
               Add to Cart
@@ -93,26 +93,26 @@
           </div>
         </div>
 
-       <div class="b-product__boxed">
-         <h3 class="b-product__boxed-title">
-           <a href="product.html" class="b-product__boxed-link">ELLERY X M'O CAPSULE</a>
+       <div class="product__boxed">
+         <h3 class="product__boxed-title">
+           <a href="product.html" class="product__boxed-link">ELLERY X M'O CAPSULE</a>
          </h3>
 
-         <p class="b-product__boxed-text">
+         <p class="product__boxed-text">
            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
          </p>
 
-         <div class="b-product__boxed-cost">$52.00</div>
+         <div class="product__boxed-cost">$52.00</div>
        </div>
       </div>
 
-      <div class="b-product__item">
-        <div class="b-product__media">
+      <div class="product__item">
+        <div class="product__media">
           <img src="assets/img/products/img-03.jpg" alt="">
 
-          <div class="b-product__add">
-            <button type="button" class="b-btn b-btn__cart">
-              <svg class="b-btn__cart-icon">
+          <div class="product__add">
+            <button type="button" class="btn btn__cart">
+              <svg class="btn__cart-icon">
                 <use xlink:href="assets/img/sprite.svg#basket"></use>
               </svg>
               Add to Cart
@@ -120,26 +120,26 @@
           </div>
         </div>
 
-       <div class="b-product__boxed">
-         <h3 class="b-product__boxed-title">
-           <a href="product.html" class="b-product__boxed-link">ELLERY X M'O CAPSULE</a>
+       <div class="product__boxed">
+         <h3 class="product__boxed-title">
+           <a href="product.html" class="product__boxed-link">ELLERY X M'O CAPSULE</a>
          </h3>
 
-         <p class="b-product__boxed-text">
+         <p class="product__boxed-text">
            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
          </p>
 
-         <div class="b-product__boxed-cost">$52.00</div>
+         <div class="product__boxed-cost">$52.00</div>
        </div>
       </div>
 
-      <div class="b-product__item">
-        <div class="b-product__media">
+      <div class="product__item">
+        <div class="product__media">
           <img src="assets/img/products/img-04.jpg" alt="">
 
-          <div class="b-product__add">
-            <button type="button" class="b-btn b-btn__cart">
-              <svg class="b-btn__cart-icon">
+          <div class="product__add">
+            <button type="button" class="btn btn__cart">
+              <svg class="btn__cart-icon">
                 <use xlink:href="assets/img/sprite.svg#basket"></use>
               </svg>
               Add to Cart
@@ -147,26 +147,26 @@
           </div>
         </div>
 
-       <div class="b-product__boxed">
-         <h3 class="b-product__boxed-title">
-           <a href="product.html" class="b-product__boxed-link">ELLERY X M'O CAPSULE</a>
+       <div class="product__boxed">
+         <h3 class="product__boxed-title">
+           <a href="product.html" class="product__boxed-link">ELLERY X M'O CAPSULE</a>
          </h3>
 
-         <p class="b-product__boxed-text">
+         <p class="product__boxed-text">
            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
          </p>
 
-         <div class="b-product__boxed-cost">$52.00</div>
+         <div class="product__boxed-cost">$52.00</div>
        </div>
       </div>
 
-      <div class="b-product__item">
-        <div class="b-product__media">
+      <div class="product__item">
+        <div class="product__media">
           <img src="assets/img/products/img-05.jpg" alt="">
 
-          <div class="b-product__add">
-            <button type="button" class="b-btn b-btn__cart">
-              <svg class="b-btn__cart-icon">
+          <div class="product__add">
+            <button type="button" class="btn btn__cart">
+              <svg class="btn__cart-icon">
                 <use xlink:href="assets/img/sprite.svg#basket"></use>
               </svg>
               Add to Cart
@@ -174,26 +174,26 @@
           </div>
         </div>
 
-       <div class="b-product__boxed">
-         <h3 class="b-product__boxed-title">
-           <a href="product.html" class="b-product__boxed-link">ELLERY X M'O CAPSULE</a>
+       <div class="product__boxed">
+         <h3 class="product__boxed-title">
+           <a href="product.html" class="product__boxed-link">ELLERY X M'O CAPSULE</a>
          </h3>
 
-         <p class="b-product__boxed-text">
+         <p class="product__boxed-text">
            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
          </p>
 
-         <div class="b-product__boxed-cost">$52.00</div>
+         <div class="product__boxed-cost">$52.00</div>
        </div>
       </div>
 
-      <div class="b-product__item">
-        <div class="b-product__media">
+      <div class="product__item">
+        <div class="product__media">
           <img src="assets/img/products/img-06.jpg" alt="">
 
-          <div class="b-product__add">
-            <button type="button" class="b-btn b-btn__cart">
-              <svg class="b-btn__cart-icon">
+          <div class="product__add">
+            <button type="button" class="btn btn__cart">
+              <svg class="btn__cart-icon">
                 <use xlink:href="assets/img/sprite.svg#basket"></use>
               </svg>
               Add to Cart
@@ -201,22 +201,22 @@
           </div>
         </div>
 
-       <div class="b-product__boxed">
-         <h3 class="b-product__boxed-title">
-           <a href="product.html" class="b-product__boxed-link">ELLERY X M'O CAPSULE</a>
+       <div class="product__boxed">
+         <h3 class="product__boxed-title">
+           <a href="product.html" class="product__boxed-link">ELLERY X M'O CAPSULE</a>
          </h3>
 
-         <p class="b-product__boxed-text">
+         <p class="product__boxed-text">
            Known for her sculptural takes on traditional tailoring, Australian arbiter of cool Kym Ellery teams up with Moda Operandi.
          </p>
 
-         <div class="b-product__boxed-cost">$52.00</div>
+         <div class="product__boxed-cost">$52.00</div>
        </div>
       </div>
     </div>
 
-    <div class="b-product__more">
-      <a href="#" class="b-btn__light b-btn">Browse All Product</a>
+    <div class="product__more">
+      <a href="#" class="btn__light btn">Browse All Product</a>
     </div>
   </section>
 </main>
