--- a/src/twig/templates/_header__page.twig
+++ b/src/twig/templates/_header__page.twig
@@ -1,16 +1,16 @@
-<header class="b-header__page">
-  <div class="b-header__page-inner b-container">
-    <h1 class="b-header__page-title">{{ titlePage }}</h1>
+<header class="header__page">
+  <div class="header__page-inner container">
+    <h1 class="header__page-title">{{ titlePage }}</h1>
 
     {% if breadcrumb == "true" %}
-    <ol class="b-breadcrumb">
-      <li class="b-breadcrumb__item">
-        <a href="index.html" class="b-breadcrumb__link">HOME</a>
+    <ol class="breadcrumb">
+      <li class="breadcrumb__item">
+        <a href="index.html" class="breadcrumb__link">HOME</a>
       </li>
-      <li class="b-breadcrumb__item">
-        <a href="catalog.html" class="b-breadcrumb__link">MEN</a>
+      <li class="breadcrumb__item">
+        <a href="catalog.html" class="breadcrumb__link">MEN</a>
       </li>
-      <li class="b-breadcrumb__item b-breadcrumb__item__active" aria-current="page">
+      <li class="breadcrumb__item breadcrumb__item__active" aria-current="page">
         NEW ARRIVALS
       </li>
     </ol>
