--- a/src/styles/section/_catalog.scss
+++ b/src/styles/section/_catalog.scss
@@ -1,20 +1,20 @@
-.b-catalog {
+.catalog {
   margin-bottom: 96px;
 }
 
-.b-catalog__pagination {
+.catalog__pagination {
   margin-top: 48px;
   text-align: center;
   display: flex;
   justify-content: center;
 }
 
-.b-catalog__sorting {
+.catalog__sorting {
   margin-bottom: 64px;
 }
 
 @media (min-width: 992px) {
-  .b-catalog__sorting {
+  .catalog__sorting {
     display: grid;
     grid-template-columns: 1fr 2fr;
     gap: 30px;
@@ -22,7 +22,7 @@
 }
 
 @media (max-width: 991px) {
-  .b-catalog__sorting {
+  .catalog__sorting {
     margin-left: -15px;
     margin-right: -15px;
     display: flex;
