--- a/src/styles/section/_detail.scss
+++ b/src/styles/section/_detail.scss
@@ -1,4 +1,4 @@
-.b-detail {
+.detail {
   padding: 66px 12px;
   border-top: 1px solid #EAEAEA;
   border-bottom: 1px solid #EAEAEA;
@@ -8,7 +8,7 @@
   text-align: center;
 }
 
-.b-detail__category {
+.detail__category {
   margin-bottom: 15px;
   font-weight: 300;
   font-size: 14px;
@@ -26,7 +26,7 @@
   }
 }
 
-.b-detail__title {
+.detail__title {
   margin-bottom: 48px;
   font-weight: 300;
   font-size: 18px;
@@ -34,7 +34,7 @@
   color: #4D4D4D;
 }
 
-.b-detail__text {
+.detail__text {
   max-width: 557px;
   margin: 0 auto 33px;
   font-weight: 300;
@@ -44,45 +44,45 @@
   color: #5E5E5E;
 }
 
-.b-detail__cost {
+.detail__cost {
   font-weight: 300;
   font-size: 24px;
   line-height: 29px;
   color: #EF5B70;
 }
 
-.b-detail__decor {
+.detail__decor {
   margin-left: auto;
   margin-right: auto;
   background-color: #EAEAEA;
   opacity: 1;
 }
 
-.b-detail__select {
+.detail__select {
   margin-bottom: 48px;
   display: flex;
   justify-content: center;
 }
 
-.b-detail__similar {
+.detail__similar {
   margin-bottom: 128px;
 }
 
 @media (min-width: 700px) {
-  .b-detail__slider {
+  .detail__slider {
     margin-top: -51px;
     background-color: #f7f7f7;
     text-align: center;
   }
 
-  .b-detail {
+  .detail {
     margin-bottom: 128px;
     margin-left: 30px;
     margin-right: 30px;
     border-left: 1px solid #EAEAEA;
     border-right: 1px solid #EAEAEA;
   }
-  .b-detail__decor {
+  .detail__decor {
     max-width: 642px;
     margin-top: 62px;
     margin-bottom: 62px;
@@ -90,25 +90,25 @@
 }
 
 @media (min-width: 992px) {
-  .b-detail {
+  .detail {
     margin-top: -45px;
   }
 }
 
 @media (max-width: 699px) {
-  .b-detail__slider {
+  .detail__slider {
     padding-top: 65px;
   }
-  .b-detail {
+  .detail {
     margin-bottom: 64px;
     margin-left: -15px;
     margin-right: -15px;
   }
-  .b-detail__box {
+  .detail__box {
     padding-left: 6px;
     padding-right: 6px;
   }
-  .b-detail__decor {
+  .detail__decor {
     max-width: 175px;
     margin-top: 31px;
     margin-bottom: 48px;
@@ -116,11 +116,11 @@
 }
 
 @media (max-width: 359px) {
-  .b-detail__box {
+  .detail__box {
     padding-left: 0;
     padding-right: 0;
 
-    .b-sorting__box-heading {
+    .sorting__box-heading {
       font-size: 11px;
     }
   }
