--- a/src/styles/section/_offers.scss
+++ b/src/styles/section/_offers.scss
@@ -1,8 +1,8 @@
-.b-offers__item {
+.offers__item {
   position: relative;
 }
 
-.b-offers__box {
+.offers__box {
   background-color: rgba(#211616, .7);
   position: absolute;
   line-height: 27px;
@@ -15,23 +15,23 @@
   justify-content: center;
 }
 
-.b-offers__box-top {
+.offers__box-top {
   color: #fff;
 }
 
-.b-offers__box-bottom {
+.offers__box-bottom {
   font-weight: 700;
   font-size: 24px;
   color: $pink;
 }
 
 @media (min-width: 700px) {
-  .b-offers {
+  .offers {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: auto;
   }
-  .b-offers__item {
+  .offers__item {
     &:not(:last-of-type) {
       grid-row-start: 1;
     }
@@ -56,23 +56,23 @@
 }
 
 @media (min-width: 992px) {
-  .b-offers {
+  .offers {
     margin-bottom: 99px;
     gap: 30px;
   }
 }
 
 @media (max-width: 991px) {
-  .b-offers {
+  .offers {
     gap: 20px;
   }
 }
 
 @media (max-width: 699px) {
-  .b-offers {
+  .offers {
     margin-bottom: 67px;
   }
-  .b-offers__item {
+  .offers__item {
     &:not(:last-of-type) {
       margin-bottom: 32px;
     }
@@ -89,7 +89,7 @@
 }
 
 @media (min-width: 700px) and (max-width: 991px) {
-  .b-offers {
+  .offers {
     margin-bottom: 67px;
   }
 }
